# yarkie

./: .gitignore  LICENSE  README.md
scripts/: pyproject.toml
scripts/scripts/: cli.py
scripts/tests/: test_scripts.py
tools/: .coveragerc  .flake8  .gitignore  .ruff.toml  CLAUDE.md  GEMINI.md  README.md  Taskfile.yml  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  rsync-global-to-local.sh  rsync-local-to-global.sh
tools/.claude/: settings.local.json
tools/.claude/commands/: code-review.md  commit.md  deps.md  implement.md  pr.md  split-pr.md  tools-archive.md  tools-catchup.md  tools-code-review.md  tools-implement.md  tools-plan-feature.md
tools/.gemini/commands/: archive.toml  catchup.toml  code-review.toml  commit.toml  deps.toml  implement.toml  me-plan.toml  pr.toml  split-pr.toml  tools-plan-feature.toml
tools/.github/workflows/: qa.yml
tools/alembic/: env.py
tools/alembic/versions/: 0f82f6ff2775_fix_video_s.py  13346968846a_add_is_tune.py  392e5bb505d3_initial_migration.py  5328ad3ee60f_re_add_last_updated_to_track_table.py  82a71c181aee_make_discogs_track_id_autoincrement.py  8a17ace0170e_resync_schema.py  8c74b7f98837_resync_schema.py  c78f2a13f4b5_rename_discogxxx_to_discogsxxx.py  d9d22a90d621_add_discogs_tables.py  fd51db28df23_remove_relationship.py
tools/docs/: project-plan.md  requirements.md  scripts-to-cli-migration.md  testing-guide.md
tools/docs/dev-logs/: 2026-01-08-1518-cbb8d5e-update-tooling-and-readme.md  2026-01-08-1519-cbb8d5e-fix-cli-property-access-bug.md  2026-01-08-1520-cbb8d5e-unify-configuration.md  2026-01-08-1521-cbb8d5e-decouple-services-from-appcontext.md  2026-01-08-2257-90d7d0f-split-into-domain-specific-repositories.md  2026-01-08-2331-c3dc23b-extract-business-logic-to-services.md  2026-01-09-0014-9ebdaff-extract-common-infrastructure.md  2026-01-09-0135-1dc6e0c-extract-discogs-logic-to-service.md  2026-01-09-1534-78508f0-create-command-helper-module.md  2026-01-09-1654-85520da-refine-archiver-service.md  2026-01-09-1738-69df232-clean-up-scripts-directory.md  2026-01-09-1822-e037129-establish-testing-patterns-for-commands.md  2026-01-09-1825-e037129-architecture-cleanup-plan.md
tools/scripts/: missing_videos.py  randomiser.py  randomiser_2.py  randomiser_3.py  randomiser_4.py
tools/scripts/sql/: schema.sql
tools/sql/: schema.sql
tools/sql/migrations/: 001_add_playlist_enabled.py
tools/sql/utils/: delete_playlist.sh  delete_playlist.sql  delete_video.sh  disable_playlists.sh  download_missing_videos.sh  restore_downloaded.sql  update_video.sql
tools/src/tools/: app_context.py  cli.py
tools/tests/: conftest.py  test_factories.py  test_scripts.py  test_tools.py
tools/tests/services/: test_archiver_service.py  test_auto_interaction_strategy.py  test_discogs_interaction_strategy.py  test_discogs_processor.py  test_discogs_search_service.py  test_discogs_service.py  (+3 more)
tools/tools/: __main__.py  app_context.py  cli.py  exceptions.py  repositories.py  settings.py  ydl_settings.py
(+122 files in other folders)
