[project]
name = "scripts"
version = "0.1.1"
description = "helpers and set up scripts for yarkie"
requires-python = ">=3.11"
dependencies = [
    "click == 8.1.7",
    "pydantic == 2.4.2",
    "requests == 2.31.0",
    "sqlite-utils == 3.35.1",
    "yt-dlp == 2023.10.13",
]

[project.entry-points.console_scripts]
scripts = "scripts.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
