[project]
name = "tools"
version = "0.1.1"
description = "Helpers and set up scripts for yarkie"
requires-python = ">=3.11"


[project.scripts]
# Entry point for the command-line interface
tools = "cli:cli"


[tool.black]
# Black code formatter settings
line-length = 88
target-version = ['py312']
include = '\.py?$'
