[project]
name = "tools"
version = "0.1.1"
description = "Helpers and set up scripts for yarkie"
requires-python = ">=3.14"
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp>=3.11.8",
  "alembic>=1.15.2",
  "click>=8.1.7",
  "go-task-bin>=3.44.1",
  "pandas>=2.2.3",
  "pydantic>=2.10.2",
  "pydantic-settings>=2.8.1",
  "pytest-data>=0.4",
  "python3-discogs-client>=2.8",
  "questionary>=2.0.1",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.40",
  "yt-dlp==2025.12.30.233018.dev0",
]

[dependency-groups]
dev = [
  "faker>=33.1.0",
  "pillow>=11.0.0",
  "polyfactory>=2.18.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-data>=0.4",
  "ruff>=0.11.6",
  "ty>=0.0.10",
  "types-aiofiles>=24.1.0.20240626",
]


[project.scripts]
# Entry point for the command-line interface
tools = "tools.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]
